# mod_auth_kerb

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.in  NEWS  README  README.static  README_name_attr  TODO  apxs.sh  config.h.in  configure  configure.in  gss.c  gss.h  makefile.include  mod_auth_gssapi.c  mod_auth_gssapi.conf  mod_auth_gssapi.h  mod_auth_gssapi.spec  mod_auth_gssweb.c  mod_auth_gssweb.h  protocol.txt
apache1/: api_inc.h  auth_cmds.c  auth_config.h  auth_user.c  dir_config.c  module.c
apache2/: api_inc.h  auth_cmds.c  auth_user.c  dir_config.c  hooks.c  module.c
client/: Makefile  base64.c  client_locl.h  gss_common.c  gss_common.h  http_client.c  net_read.c  net_write.c
debian/: auth_gssapi.load  auth_gssapi.load~  changelog  control  copyright  libapache2-mod-auth-gssapi.install
krb4/: krb4_inc.h  validate.c
krb5/: krb5_inc.h  validate.c
spnegokrb5/: .cvsignore  Makefile  Makefile.in  accept_sec_context.c  asn1_NegTokenInit.c  asn1_NegTokenTarg.c  asn1_err.h  decapsulate.c  der.h  der_copy.c  der_free.c  der_get.c  der_length.c  der_put.c  encapsulate.c  init_sec_context.c  spnego_asn1.h  spnegokrb5.h  spnegokrb5_locl.h  timegm.c
src/: .cvsignore  Makefile.in  mit-internals.h  mod_auth_kerb.c
test/: gssweb_client.pl  gssweb_client.pl~
